--- a/src/main/resources/templates/userInfoPage.html
+++ b/src/main/resources/templates/userInfoPage.html
@@ -1,44 +1,93 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
-    <title>UserTablePage</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Admin Panel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
-    <h1>User Management System</h1>
-    <hr>
-    <h2>User Info</h2>
 
-    <table border="1" class="table table-responsive-md table-striped">
-        <thead>
-        <tr>
-            <th>User First Name</th>
-            <th>User Last Name</th>
-            <th>User Age</th>
-            <th>Role</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td th:text="${user.getName()}"></td>
-            <td th:text="${user.getLastname()}"></td>
-            <td th:text="${user.getAge()}"></td>
-            <td th:text="${user.getRoles()}"></td>
-        </tr>
-        </tbody>
-    </table>
-    <hr>
-    <div sec:authorize="hasAuthority('ROLE_ADMIN')">
-        <a th:href="@{/admin}" > Back to UserList</a>
+<div class="bg-light vh-100">
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="navbar-brand mb-0 h1" th:text="${user.getEmail()} "></a>
+                    <a class="navbar-brand">with roles:</a>
+                    <a class="navbar-brand" th:text="${user.getRoles()}"></a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container-fluid">
+        <div class="row">
+
+            <!--Левый навбар, белый, с голубыми кнопками-->
+
+            <div class="col-2 bg-white vh-100 p-0">
+                <nav class="navbar" id="admin/user-tab">
+                    <ul class="nav nav-pills flex-column" style="width: 100%">
+                        <li class="nav-item">
+                            <a class="nav-link "
+                               aria-current="page" th:href="@{/admin}">Admin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" th:href="@{/admin/userInfoForm/}">User</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <!--Заголовок, отступы и навбар, в котором возможно переключение с таблицы на добавление юзера-->
+
+            <div class="col-10 p-4 bg-light">
+                <h1>User information-page</h1>
+
+                <!--Таблица с шапкой-->
+
+                <div><h5 class="card-header bg-light">About user</h5></div>
+                <div class="p-4 border bg-white">
+                    <table class="table table-striped table-hover border-top ">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Email</th>
+                            <th>Age</th>
+                            <th>Role</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="loggedUser : ${user}">
+                            <td th:text="${user.id}"></td>
+                            <td th:text="${user.name}"></td>
+                            <td th:text="${user.lastname}"></td>
+                            <td th:text="${user.email}"></td>
+                            <td th:text="${user.age}"></td>
+                            <td th:text="${user.roles}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
-    <br>
-    <a th:href="@{/logout}" class="btn btn-danger">Logout</a>
 </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </html>
