--- a/src/main/resources/templates/userInfoPage.html
+++ b/src/main/resources/templates/userInfoPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -32,12 +32,12 @@
 
             <!--Левый навбар, белый, с голубыми кнопками-->
 
-            <div class="col-2 bg-white vh-100 p-0">
+            <div class="col-2 bg-white vh-100 p-0" >
                 <nav class="navbar" id="admin/user-tab">
                     <ul class="nav nav-pills flex-column" style="width: 100%">
-                        <li class="nav-item">
-                            <a class="nav-link "
-                               aria-current="page" th:href="@{/admin}">Admin</a>
+                        <li class="nav-item" >
+                            <a class="nav-link" aria-current="page"
+                               th:href="@{/admin}" sec:authorize="hasAuthority('ROLE_ADMIN')">Admin</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" th:href="@{/admin/userInfoForm/}">User</a>
