--- a/src/main/resources/templates/userInfoPage.html
+++ b/src/main/resources/templates/userInfoPage.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="navbar-brand mb-0 h1" th:text="${user.getEmail()} "></a>
+                    <a class="navbar-brand fw-bold" th:text="${user.getEmail()} "></a>
                     <a class="navbar-brand">with roles:</a>
                     <a class="navbar-brand" th:text="${user.getRoles()}"></a>
                 </li>
